# flake

./: AGENTS.md  Cargo.toml  README.md
scripts/: install.sh
src/: ai.rs  app.rs  config.rs  editor.rs  fs.rs  main.rs
